Add FXML setup