@@ -1,16 +1,32 @@
 package org.traffic;
 
+import javafx.application.Application;
+import org.traffic.gui.SimulationGui;
 import org.traffic.model.dto.SimulationInput;
 import org.traffic.model.dto.SimulationOutput;
 import org.traffic.service.TrafficSimulator;
 import org.traffic.utils.SimulationParser;
 
 import java.io.IOException;
+import java.util.Arrays;
 
 public class Main {
     static void main(String[] args) {
+        boolean isGuiMode = Arrays.asList(args).contains("--gui");
+
+        if (isGuiMode) {
+            System.out.println("Gui");
+            Application.launch(SimulationGui.class, args);
+        } else {
+            runConsoleSimulation(args);
+        }
+    }
+
+    private static void runConsoleSimulation(String[] args) {
         if (args.length < 2) {
-            System.err.println("App usage: java -jar sim.jar <input.json> <output.json>");
+            System.err.println("App usage:");
+            System.err.println("  Console mode: java --enable-native-access=ALL-UNNAMED -jar sim.jar <input.json> <output.json>");
+            System.err.println("  GUI mode: App usage: java --enable-native-access=ALL-UNNAMED -jar sim.jar --gui");
             return;
         }
 
